Fix video appearance on mobile

--- a/src/sass/portfolio_page/index.scss
+++ b/src/sass/portfolio_page/index.scss
@@ -8,10 +8,23 @@
   .portfolio-hero-image {
     width: 100%;
     border-radius: 0.875em;
-    display: flex;
-    align-items: center;
     overflow: hidden;
     position: relative;
+
+    > video {
+      min-height: 100%;
+      min-width: 100%;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: left;
+    }
+
+    @media (width < $breakpoint) {
+      &.video {
+        height: 300px;
+      }
+    }
 
     @media (width >= $breakpoint) {
       height: calc(550px - 1.5em);
